--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,21 +1,43 @@
 {
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "MacOS Clean",
-            "type": "node",
-            "request": "launch",
-            "preLaunchTask": "Clean MacOS Project",
-            "runtimeExecutable": "echo",
-            "args": ["Clean MacOS"],
-        },
-        {
-            "name": "MacOS Debug Arm64",
-            "type": "coreclr",
-            "request": "attach",
-            "processId": "${command:pickProcess}",
-            "preLaunchTask": "Run MacOS Debug Arm64",
-            "justMyCode": false,
-        }
-    ]
+	"version": "0.2.0",
+	"configurations": [
+		{
+			"name": "MacOS Clean",
+			"type": "node",
+			"request": "launch",
+			"preLaunchTask": "Clean MacOS Project",
+			"runtimeExecutable": "echo",
+			"args": ["Clean MacOS"],
+		},
+		{
+			"name": "MacOS Debug Arm64",
+			"type": "coreclr",
+			"request": "attach",
+			"processId": "${command:pickProcess}",
+			"preLaunchTask": "Run MacOS Debug Arm64",
+			"justMyCode": false,
+		},
+		{
+			"name": "Linux Clean",
+			"type": "node",
+			"request": "launch",
+			"preLaunchTask": "Clean Linux Project",
+			"runtimeExecutable": "echo",
+			"args": ["Clean Linux"],
+		},
+		{
+			"name": "Linux Debug",
+			"type": "coreclr",
+			"request": "launch",
+			"preLaunchTask": "Build Linux Debug",
+			"program": "${workspaceFolder}/StepManiaEditorLinux/bin/Debug/net8.0/linux-x64/GrooveAuthor.dll",
+			"args": [],
+			"cwd": "${workspaceFolder}",
+			"stopAtEntry": false,
+			"console": "internalConsole",
+			"logging": {
+				"moduleLoad": false
+			}
+		}
+	]
 }
