--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -159,6 +159,22 @@
 				"kind": "build",
 				"isDefault": true
 			}
+		},
+		{
+			"label": "Build Linux Release",
+			"type": "process",
+			"command": "dotnet",
+			"args": [
+				"build",
+				"./StepManiaEditorLinux/StepManiaEditorLinux.csproj",
+				"-c",
+				"Release"
+			],
+			"problemMatcher": "$msCompile",
+			"group": {
+				"kind": "build",
+				"isDefault": true
+			}
 		}
 	]
 }
