Add x64 Mac OS build configurations.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,6 +18,30 @@
 			"justMyCode": false,
 		},
 		{
+			"name": "MacOS Release Arm64",
+			"type": "coreclr",
+			"request": "attach",
+			"processId": "${command:pickProcess}",
+			"preLaunchTask": "Run MacOS Release Arm64",
+			"justMyCode": false,
+		},
+		{
+			"name": "MacOS Debug X64",
+			"type": "coreclr",
+			"request": "attach",
+			"processId": "${command:pickProcess}",
+			"preLaunchTask": "Run MacOS Debug X64",
+			"justMyCode": false,
+		},
+		{
+			"name": "MacOS Release X64",
+			"type": "coreclr",
+			"request": "attach",
+			"processId": "${command:pickProcess}",
+			"preLaunchTask": "Run MacOS Release X64",
+			"justMyCode": false,
+		},
+		{
 			"name": "Linux Clean",
 			"type": "node",
 			"request": "launch",
