Implement OS-level file associations on MacOS.

--- a/StepManiaEditorMacOS/Info.plist
+++ b/StepManiaEditorMacOS/Info.plist
@@ -34,5 +34,21 @@
     <true/>
     <key>NSHighResolutionCapable</key>
     <true/>
+    <key>CFBundleDocumentTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleTypeExtensions</key>
+            <array>
+                <string>ssc</string>
+                <string>sm</string>
+            </array>
+            <key>CFBundleTypeName</key>
+            <string>Simfile</string>
+            <key>CFBundleTypeRole</key>
+            <string>Editor</string>
+            <key>LSHandlerRank</key>
+            <string>Owner</string>
+        </dict>
+    </array>
 </dict>
 </plist>
