--- a/StepManiaEditorMacOS/StepManiaEditorMacOS.csproj
+++ b/StepManiaEditorMacOS/StepManiaEditorMacOS.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
 		<TargetFramework>net8.0-macos</TargetFramework>
@@ -14,7 +14,7 @@
 	</PropertyGroup>
 	<PropertyGroup>
 		<AssemblyName>GrooveAuthor</AssemblyName>
-		<Version>0.4.1</Version>
+		<Version>1.0.0</Version>
 	</PropertyGroup>
 	<PropertyGroup>
 		<RuntimeIdentifiers>osx-arm64;osx-x64</RuntimeIdentifiers>
