--- a/StepManiaEditorWindows/StepManiaEditorWindows.csproj
+++ b/StepManiaEditorWindows/StepManiaEditorWindows.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<OutputType>WinExe</OutputType>
 		<TargetFramework>net8.0-windows7.0</TargetFramework>
@@ -10,7 +10,7 @@
 	<PropertyGroup>
 		<AssemblyName>GrooveAuthor</AssemblyName>
 		<ApplicationIcon>Icon.ico</ApplicationIcon>
-		<Version>0.4.1</Version>
+		<Version>1.0.0</Version>
 	</PropertyGroup>
 	<PropertyGroup>
 		<RuntimeIdentifier>win-x64</RuntimeIdentifier>
