--- a/StepManiaEditorWindowsOpenGL/StepManiaEditorWindowsOpenGL.csproj
+++ b/StepManiaEditorWindowsOpenGL/StepManiaEditorWindowsOpenGL.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<OutputType>WinExe</OutputType>
 		<TargetFramework>net8.0-windows7.0</TargetFramework>
@@ -12,7 +12,7 @@
 	</PropertyGroup>
 	<PropertyGroup>
 		<AssemblyName>GrooveAuthor</AssemblyName>
-		<Version>0.4.1</Version>
+		<Version>1.0.0</Version>
 	</PropertyGroup>
 	<PropertyGroup>
 		<RuntimeIdentifier>win-x64</RuntimeIdentifier>
